--- a/comming-soon.html
+++ b/comming-soon.html
@@ -52,7 +52,7 @@
         <p>
           <span
             class="typed"
-            data-typed-items="We Are Working On, Something Amazing,So Stay Tuned!"
+            data-typed-items="I'm Working On, Something Amazing,So Stay Tuned!"
           ></span>
         </p>
       </div>
