--- a/comming-soon.html
+++ b/comming-soon.html
@@ -41,7 +41,86 @@
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
   <body>
-    
+    <!-- ======= Header ======= -->
+    <header id="header">
+      <div class="d-flex flex-column">
+        <div class="profile">
+          <img
+            src="assets/img/06f7a470-3e0a-4746-a654-2563a2dde71c.jpg"
+            alt=""
+            class="img-fluid rounded-circle"
+          />
+          <h1 class="text-light"><a href="index.html">Usama Nadeem</a></h1>
+          <div class="social-links mt-3 text-center">
+            <a
+              href="https://twitter.com/usamanadeem"
+              class="twitter"
+              target="_blank"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/usama.nadeem.98892615?mibextid=ZbWKwL"
+              class="facebook"
+              target="_blank"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UCdqnrEVw_cnMSXslrTXZojA"
+              class="youtube"
+              target="_blank"
+              ><i class="bx bxl-youtube"></i
+            ></a>
+            <a
+              href="https://github.com/usamanadeemdeveloper"
+              target="_blank"
+              class="github"
+              ><i class="bx bxl-github"></i
+            ></a>
+            <a href="#" class="linkedin" target="_blank"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
+          </div>
+        </div>
+
+        <nav id="navbar" class="nav-menu navbar">
+          <ul>
+            <li>
+              <a href="index.html" class="nav-link scrollto active"
+                ><i class="bx bx-home"></i> <span>Home</span></a
+              >
+            </li>
+            <li>
+              <a href="index.html" class="nav-link scrollto"
+                ><i class="bx bx-user"></i> <span>About</span></a
+              >
+            </li>
+            <li>
+              <a href="index.html" class="nav-link scrollto"
+                ><i class="bx bx-file-blank"></i> <span>Resume</span></a
+              >
+            </li>
+            <li>
+              <a href="comming-soon.html" class="nav-link scrollto"
+                ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+              >
+            </li>
+            <li>
+              <a href="index.html" class="nav-link scrollto"
+                ><i class="bx bx-server"></i> <span>Services</span></a
+              >
+            </li>
+            <li>
+              <a href="index.html" class="nav-link scrollto"
+                ><i class="bx bx-envelope"></i> <span>Contact</span></a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- .nav-menu -->
+      </div>
+    </header>
+    <!-- End Header -->
+
     <!-- ======= Hero Section ======= -->
     <section
       id="hero"
