--- a/index.html
+++ b/index.html
@@ -142,14 +142,11 @@
       id="hero"
       class="d-flex flex-column justify-content-center align-items-center"
     >
-      <div class="hero-container pe-5 me-5" data-aos="fade-in">
+      <div class="hero-container" data-aos="fade-in">
         <h1>Usama Nadeem</h1>
         <p>
-          I'm
-          <span
-            class="typed"
-            data-typed-items="Designer, Developer, Freelancer"
-          ></span>
+          I'm a
+          <span class="typed" data-typed-items="Designer, Developer,"></span>
         </p>
       </div>
     </section>
@@ -168,7 +165,7 @@
               back-end and front-end technologies, I bring a holistic approach
               to software development.
             </p>
-            <h3 class="my-3">Technical Expertise</h3>
+            <!-- <h3 class="my-3">Technical Expertise</h3>
             <h5 class="stack">Back-End Development (Spring Boot)</h5>
             <ul>
               <li>
@@ -213,7 +210,7 @@
                 Enthusiastic about staying up-to-date with the latest industry
                 trends and technologies.
               </li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="row">
@@ -260,17 +257,17 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
+                      <strong>Email:</strong>
                       <small>usamanadeemparacha@gmail.com</small>
                     </li>
-                    <li>
+                    <!-- <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Freelance:</strong> <span>Available</span>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
-              <h5 class="stack mt-3">Let's Connect :</h5>
+              <!-- <h5 class="stack mt-3">Let's Connect :</h5>
               <p class="fst-italic">
                 Passionate about contributing to impactful projects and
                 collaborating with like-minded individuals. Let's connect and
@@ -279,7 +276,7 @@
                 creating something exceptional together. Looking forward to our
                 conversation! Let's turn ideas into reality. Your vision, my
                 dedication – let's make it happen!
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -290,13 +287,15 @@
       <section id="facts" class="facts">
         <div class="container">
           <div class="section-title">
-            <h2>Facts</h2>
-            <p>
-              I'm a Full Stack Developer. My project portfolio reflects diverse
-              successes, showcasing technical expertise and problem-solving
-              skills. An avid learner, I stay current with industry trends and
-              actively contribute to the developer community. Let's connect to
-              explore how I can bring value to your team or project!
+            <h2>Let's Connect :</h2>
+            <p class="fst-italic">
+              Passionate about contributing to impactful projects and
+              collaborating with like-minded individuals. Let's connect and
+              explore how I can bring my expertise to your team or project.
+              Thrilled about the potential for meaningful collaboration and
+              creating something exceptional together. Looking forward to our
+              conversation! Let's turn ideas into reality. Your vision, my
+              dedication – let's make it happen!
             </p>
           </div>
 
@@ -330,7 +329,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Projects</strong></p>
+                <p><strong>Delivered Projects</strong></p>
               </div>
             </div>
 
@@ -347,7 +346,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Hours Of Support</strong></p>
+                <p><strong>Provided Hours Of Support</strong></p>
               </div>
             </div>
 
@@ -600,7 +599,7 @@
       <!-- End Resume Section -->
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio section-bg">
+      <section id="portfolio" class="portfolio section-bg d-none">
         <div class="container">
           <div class="section-title">
             <h2>Visual Appeals</h2>
@@ -1168,31 +1167,63 @@
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form
+                action="forms/contact.php"
+                method="post"
+                role="form"
+                class="php-email-form"
+              >
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
-                    <input type="text" name="name" class="form-control" id="name" required>
+                    <input
+                      type="text"
+                      name="name"
+                      class="form-control"
+                      id="name"
+                      required
+                    />
                   </div>
                   <div class="form-group col-md-6">
                     <label for="name">Your Email</label>
-                    <input type="email" class="form-control" name="email" id="email" required>
+                    <input
+                      type="email"
+                      class="form-control"
+                      name="email"
+                      id="email"
+                      required
+                    />
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="name">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" required>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="subject"
+                    id="subject"
+                    required
+                  />
                 </div>
                 <div class="form-group">
                   <label for="name">Message</label>
-                  <textarea class="form-control" name="message" rows="10" required></textarea>
+                  <textarea
+                    class="form-control"
+                    name="message"
+                    rows="10"
+                    required
+                  ></textarea>
                 </div>
                 <div class="my-3">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div class="sent-message">
+                    Your message has been sent. Thank you!
+                  </div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center">
+                  <button type="submit">Send Message</button>
+                </div>
               </form>
             </div>
           </div>
@@ -1224,14 +1255,14 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.umd.js"></script>
+    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
