--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
-                      <small>usamanadeemparacha@gmail.com</small>
+                      <span class="emailSize">usamanadeemparacha@gmail.com</span>
                     </li>
                     <!-- <li>
                       <i class="bi bi-chevron-right"></i>
@@ -1147,7 +1147,7 @@
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>usamanadeemparacha@.com</p>
+                  <p class="emailSize">usamanadeemparacha@gmail.com</p>
                 </div>
 
                 <div class="phone">
