--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
                 action="forms/contact.php"
-                method="post"
+                method="POST"
                 role="form"
                 class="php-email-form"
               >
