--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
-                      <span class="emailSize">usamanadeemparacha@gmail.com</span>
+                      <span class="emailSize"
+                        >usamanadeemparacha@gmail.com</span
+                      >
                     </li>
                     <!-- <li>
                       <i class="bi bi-chevron-right"></i>
@@ -1141,7 +1143,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Sector X-4, Gulshan-e-Maymar, Karachi,</p>
+                  <p>Sector X-4, Gulshan-e-Maymar, Karachi,Pakistan</p>
                 </div>
 
                 <div class="email">
@@ -1158,7 +1160,7 @@
 
                 <!-- iframe -->
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d225.95899407521165!2d67.12789769688418!3d25.022400561449597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb34692cccff741%3A0x7ab7d21881156c96!2s24CH%2BW4V%2C%201st%20St%2C%20Sector%20X%20Gulshan-e-Maymar%2C%20Karachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1705739026293!5m2!1sen!2s"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.3581054642905!2d67.12505767488491!3d25.02191843877886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb346ed2e02aaa5%3A0x9800c0b0b9fd750b!2sNawaz%20Sharif%20Park!5e0!3m2!1sen!2s!4v1705841713538!5m2!1sen!2s"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
