--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,8 @@
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-              action="https://formspree.io/usamanadeemparacha@gmail.com"
-                method="post"
+                action="https://formspree.io/f/xyyrkykj"
+                method="POST"
                 role="form"
                 class="php-email-form"
               >
