--- a/index.html
+++ b/index.html
@@ -1143,23 +1143,23 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Sector X-4, Gulshan-e-Maymar, Karachi, Pakistan</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p class="emailSize">usamanadeemparacha@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+92 336 850 7047</p>
                 </div>
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.358105464282!2d67.12505767488497!3d25.02191843877886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb346ed2e02aaa5%3A0x9800c0b0b9fd750b!2sNawaz%20Sharif%20Park!5e0!3m2!1sen!2s!4v1705855283127!5m2!1sen!2s"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
