--- a/index.html
+++ b/index.html
@@ -1173,6 +1173,7 @@
                 method="POST"
                 role="form"
                 class="php-email-form"
+                id="myForm"
               >
                 <div class="row">
                   <div class="form-group col-md-6">
@@ -1223,7 +1224,7 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Send Message</button>
+                  <button type="submit" onclick="submitForm()">Send Message</button>
                 </div>
               </form>
             </div>
