--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit" onclick="submitForm()">Send Message</button>
+                  <button type="submit">Send Message</button>
                 </div>
               </form>
             </div>
